# foodlabel

./: .gitignore  README.md  analyze.py  api.py  blinkit.py  daily_values.py  efsa_pdf.py  googli.py  nomic.py  product_images.json  prompts.py  pyproject.toml  ui.py  zepto.py
frontend/: .env.production  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Navigation.jsx  ProductAnalyzer.jsx
frontend/src/pages/: ProfilePage.jsx  RecentsPage.jsx
